Fixing AudioWide Font for the footer 2nd Trial

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -119,8 +119,8 @@ h2 {
   font-family: "Montserrat Alternates", sans-serif;
 }
 
-.audioWide {
-  font-family: "Audiowide", sans-serif;
+span {
+  font-family: "Audiowide", cursive;
 }
 
 @font-face {
